--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 C:\Users\kevin\source\repos\TP_Dojo_V1\TP_Dojo_V1\Migrations\Configuration.cs
+C:\Users\kevin\source\repos\TP_Dojo_V1\TP_Dojo_V1\App_Data
