--- a/TP_Dojo_V1.csproj
+++ b/TP_Dojo_V1.csproj
@@ -128,6 +128,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BO\Arme.cs" />
+    <Compile Include="BO\ArtMartial.cs" />
+    <Compile Include="BO\InterfaceBO.cs" />
     <Compile Include="BO\Samourai.cs" />
     <Compile Include="Context\Context.cs" />
     <Compile Include="Controllers\ArmesController.cs" />
@@ -135,6 +137,10 @@
     <Compile Include="Controllers\SamouraisController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202007290822024_Initial Migration.cs" />
+    <Compile Include="Migrations\202007290822024_Initial Migration.designer.cs">
+      <DependentUpon>202007290822024_Initial Migration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\SamouraiVM.cs" />
@@ -202,6 +208,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202007290822024_Initial Migration.resx">
+      <DependentUpon>202007290822024_Initial Migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
