--- a/TP_Dojo_V1.csproj
+++ b/TP_Dojo_V1.csproj
@@ -139,9 +139,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202007291031334_update.cs" />
-    <Compile Include="Migrations\202007291031334_update.designer.cs">
-      <DependentUpon>202007291031334_update.cs</DependentUpon>
+    <Compile Include="Migrations\202007300716370_initial.cs" />
+    <Compile Include="Migrations\202007300716370_initial.designer.cs">
+      <DependentUpon>202007300716370_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\SamouraiVM.cs" />
@@ -216,8 +216,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202007291031334_update.resx">
-      <DependentUpon>202007291031334_update.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202007300716370_initial.resx">
+      <DependentUpon>202007300716370_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
